--- a/flaskr/templates/layout.jinja
+++ b/flaskr/templates/layout.jinja
@@ -30,9 +30,17 @@
               <a class="nav-item nav-link" href="/about">About</a>
             </div>
             <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/login">Login</a>
-              <a class="nav-item nav-link" href="/register">Register</a>
+            <div class="navbar-nav"></div>
+              {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Logout</a>
+                <a class="nav-item nav-link" href="{{url_for('post.new_post')}}">New Post</a>
+              {% else %}
+                <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
+              {% endif %}
+              
+            
+              <!-- <a class="nav-item nav-link" href="/login">Login</a>
+              <a class="nav-item nav-link" href="/register">Register</a> -->
             </div>
           </div>
         </div>
