--- a/flaskr/templates/post.jinja
+++ b/flaskr/templates/post.jinja
@@ -4,7 +4,7 @@
     <img class="rounded-circle article-img" src="{{ post.author.profile_pic}}">
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="#">{{ post.author.name }}</a>
+        <a class="mr-2" href="{{ url_for('main.user_post', username=post.author.name)}}">{{ post.author.name }}</a>
         <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
         
         {% if post.author == current_user %}
